# universal_tests

./: CMakeLists.txt  flake.nix
include/: basic.hpp  common.hpp  eigen.hpp  eigen_mtl.hpp  gmres.hpp  scalar.hpp  singular.hpp  std.hpp
src/: main.cxx  test.cxx
